# saas-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/seed/: api-rate-limits.md  billing-and-refunds.md  data-export-retention.md  getting-started.md  incidents-and-sla.md  security-overview.md  sso-saml.md  sync-troubleshooting.md  webhooks.md
docs/: ARCHITECTURE.md  GLOSSARY.md  INTERVIEW_NOTES.md  LEARNING.md
evals/: run_eval.py
evals/golden_dataset/: faithfulness.jsonl  retrieval.jsonl  routing.jsonl
src/nimbusdesk/: __init__.py
src/nimbusdesk/agents/: __init__.py  __main__.py  graph.py  handoff_demo.py  hitl.py  local_tools.py  react.py  specialists.py  state.py  supervisor.py  support_agent.py  tools.py  triage.py
src/nimbusdesk/domain/: __init__.py  knowledge.py  support.py
src/nimbusdesk/guardrails/: __init__.py  injection.py  input_validation.py
src/nimbusdesk/infrastructure/: __init__.py  anthropic_llm.py  embeddings.py  reranker.py  settings.py  vector_store.py
src/nimbusdesk/interface/: __init__.py  wiring.py
src/nimbusdesk/interface/api/: __init__.py  __main__.py  app.py
src/nimbusdesk/interface/cli/: __init__.py  app.py
src/nimbusdesk/llm/: __init__.py  json_parsing.py  ports.py  tracking.py
src/nimbusdesk/mcp_clients/: __init__.py  client.py  tools.py
src/nimbusdesk/mcp_servers/: __init__.py
src/nimbusdesk/mcp_servers/crm/: __init__.py  __main__.py  server.py
src/nimbusdesk/memory/: __init__.py  episodic.py  profile_store.py  service.py  writer.py
src/nimbusdesk/observability/: __init__.py  cost.py  llm.py  tracing.py
src/nimbusdesk/rag/: __init__.py  __main__.py  answering.py  chunking.py  ingestion.py  loading.py  pipeline.py  ports.py  retrieval.py  rewrite.py  self_check.py
tests/: fakes.py
tests/integration/: test_api.py  test_hitl_flow.py  test_mcp.py  test_memory_flows.py  test_rag_pipeline.py  test_support_flows.py
tests/unit/: test_answering.py  test_anthropic_provider.py  test_architecture.py  test_chunking.py  test_guardrails.py  test_handoff_demo.py  test_ingestion.py  test_loading.py  test_memory_stores.py  test_memory_writer.py  test_observability.py  test_pipeline.py  test_react.py  test_retrieval.py  test_rewrite.py  test_self_check.py  test_supervisor.py  test_tools.py  test_triage.py
(+3 files in other folders)
